fix(core): update font-weight for popover and spacing for breadcrumbs

--- a/app/less/popovers.less
+++ b/app/less/popovers.less
@@ -2,8 +2,7 @@
 // Popovers
 // --------------------------------------------------
 .popover {
-                                                         
-  font-size: @btn-font-size;
+  font-weight: bold;
   // Offset the popover to account for the popover arrow
   &.top     { margin-top: ( -@popover-arrow-width * 2); }
   &.right   { margin-left: ( @popover-arrow-width * 2); }
