--- a/app/less/tooltip.less
+++ b/app/less/tooltip.less
@@ -3,8 +3,9 @@
 // --------------------------------------------------
 
 // Base class
-.tooltip {                                   
-  font-size: @btn-font-size;
+.tooltip {           
+  font-size: @font-size-base;  
+  font-weight: bold;       
   &.top    { margin-top:  -@tooltip-arrow-width; padding: @tooltip-arrow-width 0; }
   &.right  { margin-left: @tooltip-arrow-width; padding: 0 @tooltip-arrow-width; }
   &.bottom { margin-top:  @tooltip-arrow-width; padding: @tooltip-arrow-width 0; }
