--- a/app/less/variables-orange2015.less
+++ b/app/less/variables-orange2015.less
@@ -917,7 +917,7 @@
 //
 //##
 
-@breadcrumb-padding-vertical:   8px;
+@breadcrumb-padding-vertical:   10px;
 @breadcrumb-padding-horizontal: 15px;
 @breadcrumb-separator-padding-vertical: 0;
 @breadcrumb-separator-padding-horizontal: 10px;
